.metadata/.plugins/org.eclipse.cdt.ui/14_I2C_LPS22HB.build.log
12:50:52 **** Incremental Build of configuration Debug for project 14_I2C_LPS22HB ****
make -j8 all 
arm-none-eabi-gcc "../Drivers/BSP/Components/lps22hb/lps22hb.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L053xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -I"D:/STM32/Workspace/14_I2C_LPS22HB/Drivers/BSP/Components/lps22hb" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/BSP/Components/lps22hb/lps22hb.d" -MT"Drivers/BSP/Components/lps22hb/lps22hb.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Drivers/BSP/Components/lps22hb/lps22hb.o"
../Drivers/BSP/Components/lps22hb/lps22hb.c: In function 'LPS22HB_P_ReadID':
../Drivers/BSP/Components/lps22hb/lps22hb.c:90:18: error: conflicting types for 'SENSOR_IO_Write'; have 'uint8_t(void *, uint8_t,  uint8_t *, uint16_t)' {aka 'unsigned char(void *, unsigned char,  unsigned char *, short unsigned int)'}
   90 |   extern uint8_t SENSOR_IO_Write( void *handle, uint8_t WriteAddr, uint8_t *pBuffer, uint16_t nBytesToWrite );
      |                  ^~~~~~~~~~~~~~~
In file included from ../Drivers/BSP/Components/lps22hb/lps22hb.c:22:
../Drivers/BSP/Components/lps22hb/lps22hb.h:489:17: note: previous declaration of 'SENSOR_IO_Write' with type 'void(uint8_t,  uint8_t,  uint8_t)' {aka 'void(unsigned char,  unsigned char,  unsigned char)'}
  489 | extern void     SENSOR_IO_Write(uint8_t Addr, uint8_t Reg, uint8_t Value);
      |                 ^~~~~~~~~~~~~~~
../Drivers/BSP/Components/lps22hb/lps22hb.c:91:18: error: conflicting types for 'SENSOR_IO_Read'; have 'uint8_t(void *, uint8_t,  uint8_t *, uint16_t)' {aka 'unsigned char(void *, unsigned char,  unsigned char *, short unsigned int)'}
   91 |   extern uint8_t SENSOR_IO_Read( void *handle, uint8_t ReadAddr, uint8_t *pBuffer, uint16_t nBytesToRead );
      |                  ^~~~~~~~~~~~~~
In file included from ../Drivers/BSP/Components/lps22hb/lps22hb.c:22:
../Drivers/BSP/Components/lps22hb/lps22hb.h:490:17: note: previous declaration of 'SENSOR_IO_Read' with type 'uint8_t(uint8_t,  uint8_t)' {aka 'unsigned char(unsigned char,  unsigned char)'}
  490 | extern uint8_t  SENSOR_IO_Read(uint8_t Addr, uint8_t Reg);
      |                 ^~~~~~~~~~~~~~
../Drivers/BSP/Components/lps22hb/lps22hb.c:92:25: warning: passing argument 1 of 'SENSOR_IO_Read' makes pointer from integer without a cast [-Wint-conversion]
   92 |   ctrl = SENSOR_IO_Read(DeviceAddr, LPS22HB_WHO_AM_I_REG);
      |                         ^~~~~~~~~~
      |                         |
      |                         uint16_t {aka short unsigned int}
../Drivers/BSP/Components/lps22hb/lps22hb.c:91:40: note: expected 'void *' but argument is of type 'uint16_t' {aka 'short unsigned int'}
   91 |   extern uint8_t SENSOR_IO_Read( void *handle, uint8_t ReadAddr, uint8_t *pBuffer, uint16_t nBytesToRead );
      |                                  ~~~~~~^~~~~~
../Drivers/BSP/Components/lps22hb/lps22hb.c:92:10: error: too few arguments to function 'SENSOR_IO_Read'
   92 |   ctrl = SENSOR_IO_Read(DeviceAddr, LPS22HB_WHO_AM_I_REG);
      |          ^~~~~~~~~~~~~~
../Drivers/BSP/Components/lps22hb/lps22hb.c:91:18: note: declared here
   91 |   extern uint8_t SENSOR_IO_Read( void *handle, uint8_t ReadAddr, uint8_t *pBuffer, uint16_t nBytesToRead );
      |                  ^~~~~~~~~~~~~~
make: *** [Drivers/BSP/Components/lps22hb/subdir.mk:19: Drivers/BSP/Components/lps22hb/lps22hb.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

12:50:53 Build Failed. 4 errors, 1 warnings. (took 416ms)

